Improve error handling, add previous race endpoint
