# app/routers/calendar.py
@@ -50,6 +50,11 @@ def get_calendar_by_season(season: int):
                         "example": create_message("Event not found")
                     }
                 }},
+                503: {"model": Message, "content": {
+                    "application/json": {
+                        "example": create_message("Service unavailable")
+                    }
+                }},
                 200: {"model": NextEvent, "content": {
                     "application/json": {
                         "example": NextEventExample
@@ -62,8 +67,65 @@ def get_next_race():
     try:
         event_data = data["MRData"]["RaceTable"]
         event_data["timestamp"] = timestamp
-    except (IndexError, KeyError):
+    except IndexError:
         return JSONResponse(status_code=404, content=create_message("Event not found"))
+    except KeyError:
+        return JSONResponse(status_code=503, content=create_message("Service unavailable"))
+
+    return event_data
+
+
+@router.get("/event/previous",
+            tags=["Events"],
+            response_model=NextEvent,
+            responses={
+                404: {"model": Message, "content": {
+                    "application/json": {
+                        "example": create_message("Event not found")
+                    }
+                }},
+                503: {"model": Message, "content": {
+                    "application/json": {
+                        "example": create_message("Service unavailable")
+                    }
+                }},
+                200: {"model": NextEvent, "content": {
+                    "application/json": {
+                        "example": NextEventExample
+                    }
+                }}
+            })
+def get_next_race():
+    data, timestamp = get_cache("http://185.229.22.110/api/f1/current/next.json", "get_next_race")
+
+    try:
+        event_data = data["MRData"]["RaceTable"]
+        event_data["timestamp"] = timestamp
+    except IndexError:
+        return JSONResponse(status_code=404, content=create_message("Event not found"))
+    except KeyError:
+        return JSONResponse(status_code=503, content=create_message("Service unavailable"))
+
+    if float(event_data["round"]) <= 1:
+        season = int(event_data['season']) - 1
+
+        data, timestamp = get_cache(f"http://185.229.22.110/api/f1/{season}.json",
+                                    f"get_calendar_by_season.{season}")
+
+        try:
+            amount_of_races = int(data["MRData"]["total"])
+        except KeyError:
+            return JSONResponse(status_code=404, content=create_message("Calendar not found"))
+
+        data, timestamp = get_cache(f"http://185.229.22.110/api/f1/{season}.json", f"get_calendar_by_season.{season}")
+
+        try:
+            event_data = data["MRData"]["RaceTable"]["Races"][amount_of_races - 1]
+            event_data["timestamp"] = timestamp
+        except IndexError:
+            return JSONResponse(status_code=404, content=create_message("Event not found"))
+        except KeyError:
+            return JSONResponse(status_code=503, content=create_message("Service unavailable"))
 
     return event_data
 
@@ -75,6 +137,11 @@ def get_next_race():
                 404: {"model": Message, "content": {
                     "application/json": {
                         "example": create_message("Event not found")
+                    }
+                }},
+                503: {"model": Message, "content": {
+                    "application/json": {
+                        "example": create_message("Service unavailable")
                     }
                 }},
                 200: {"model": Event, "content": {
@@ -90,8 +157,10 @@ def get_event_details(season: int, round: int):
     try:
         event_data = data["MRData"]["RaceTable"]["Races"][0]
         event_data["timestamp"] = timestamp
-    except (IndexError, KeyError):
+    except IndexError:
         return JSONResponse(status_code=404, content=create_message("Event not found"))
+    except KeyError:
+        return JSONResponse(status_code=503, content=create_message("Service unavailable"))
 
     return event_data
 
